logs/validate.20260329-161724.log
error[E0432]: unresolved import `crate::ParaPair`
  --> src/Chap11/FibonacciMtPerAllThreads.rs:12:9
   |
12 |     use crate::ParaPair;
   |         ^^^^^^^^^^^^^^^ no `ParaPair` in the root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
Elapsed: 0s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 23152MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
